compiler/testData/diagnostics/tests/multiplatform/platformRedeclarationOfExpect.fir.kt
// DONT_STOP_ON_FIR_ERRORS
// MODULE: common
// FILE: common.kt
<!NO_ACTUAL_FOR_EXPECT{JVM}!>expect class <!PACKAGE_OR_CLASSIFIER_REDECLARATION!>Foo<!><!>

// MODULE: main()()(common)
// FILE: test.kt
<!NO_ACTUAL_FOR_EXPECT!>expect class Foo<!>
